# ml-ds-techniques

./: LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: art_creation_gan.ipynb  base_data_science_notebook.ipynb  connect_x.ipynb  contradiction_detection.ipynb  digit-recognizer.ipynb  digit_recognizer.ipynb  flower_classification.ipynb  forecasting_store_sales.ipynb  house_prices.ipynb  llm_classification_finetuning.ipynb  nlp_disaster_tweets.ipynb  spaceship_titanic.ipynb  titanic.ipynb
src/art_creation_gan/: __init__.py  blocks.py  constants.py  gan.py  hardware.py  io.py  losses.py  models.py
src/contradiction_detection/: __init__.py  baseline.py  data.py  infer.py  modeling.py  tokenization.py
src/digit_recognizer/: __init__.py  train.py
src/flower_classification/: __init__.py  callbacks.py  data.py  model.py
src/forecasting_store_sales/: __init__.py  features.py  modeling.py  plots.py  predict.py  utils.py
src/house_prices/: __init__.py  featurize.py  train.py
src/spaceship_titanic/: __init__.py  ensemble.py  featurize.py  train.py  tune.py
src/titanic/: __init__.py  featurize.py  hyperopt.py  models.py
