[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-ds-techniques"
version = "0.1.0"
authors = [
  {name = "James Coffey"},
]
description = "Reusable ML & data science utilities for Kaggle-style projects"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

[tool.setuptools.packages.find]
where = ["src"]
